# Ai-Report-Formatter

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  opencode.json  package-lock.json  package.json
.github/workflows/: release-desktop.yml  release-tauri.yml
apps/api/: README.md  desktop_backend.py  main.py  schemas.py
apps/api/data/: export_counts.db
apps/api/scripts/: build_desktop_backend.py
apps/api/tests/: test_api.py
apps/formatter/: README.md  app.py  requirements.txt
apps/rust-api/: Cargo.toml  README.md
apps/rust-api/src/: lib.rs  main.rs
apps/rust-api/tests/: api_contract.rs
apps/rust-desktop/: Cargo.toml  README.md
apps/rust-desktop/src/: main.rs
apps/tauri-desktop/: README.md
apps/web/: README.md  components.json  package-lock.json  package.json  playwright.config.ts
docs/: eula.md  privacy-policy.md  supported-formats.md
docs/plans/: 2026-01-30-ai-report-formatter-implementation-plan.md  2026-01-30-ai-report-formatter-styles-design.md  2026-02-01-docx-styles-implementation-plan.md  2026-02-03-docx-formatting-design.md  2026-02-03-markdown-docx-extensions-design.md  2026-02-05-markdown-to-word-formatting-plan.md
docs/releases/: v0.1.0.md
tests/: conftest.py
tests/api/: test_build_desktop_backend_script.py  test_cors.py  test_desktop_backend.py  test_generate_endpoint.py  test_preview_endpoint.py  test_startup_lazy_imports.py
tests/formatter/: test_app_logic.py  test_citations.py  test_docx_builder.py  test_docx_styles.py  test_latex.py  test_markdown_parser.py  test_pipeline.py  test_preview.py  test_ui_config.py
(+52 files in other folders)
