[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
docx-rs = "0.4"
pulldown-cmark = "0.13"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }
tower-http = { version = "0.6", features = ["cors"] }
zip = "0.6"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
